add two new css

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
   link: /
 - name: 仙剑奇侠传一
   link: /仙剑奇侠传一.html
+- name: 新仙剑奇侠传
+  link: /新仙剑奇侠传.html
 - name: 仙剑奇侠传二
   link: /仙剑奇侠传二.html
 - name: About
