--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,7 @@
   link: /新仙剑奇侠传.html
 - name: 仙剑奇侠传二
   link: /仙剑奇侠传二.html
+- name: 仙剑奇侠传三
+  link: /仙剑奇侠传三.html
 - name: About
   link: /about.html
