--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,7 @@
   link: /仙剑奇侠传三.html
 - name: 仙剑奇侠传四
   link: /仙剑奇侠传四.html
+- name: 仙剑奇侠传四
+  link: /仙剑奇侠传四.html
 - name: About
   link: /about.html
