--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,7 @@
   link: /仙剑奇侠传四.html
 - name: 仙剑奇侠传五
   link: /仙剑奇侠传五.html
+- name: 仙剑奇侠传六
+  link: /仙剑奇侠传六.html
 - name: About
   link: /about.html
