--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,18 +1,24 @@
-- name: 总介绍
+- name: 首页
   link: /
-- name: 仙剑奇侠传一
-  link: /仙剑奇侠传一.html
-- name: 新仙剑奇侠传
-  link: /新仙剑奇侠传.html
-- name: 仙剑奇侠传二
-  link: /仙剑奇侠传二.html
-- name: 仙剑奇侠传三
-  link: /仙剑奇侠传三.html
-- name: 仙剑奇侠传四
-  link: /仙剑奇侠传四.html
-- name: 仙剑奇侠传五
-  link: /仙剑奇侠传五.html
-- name: 仙剑奇侠传六
-  link: /仙剑奇侠传六.html
-- name: About
+- name: 仙剑一
+  link: /1.html
+- name: 新仙剑
+  link: /1_n.html
+- name: 仙剑二
+  link: /2.html
+- name: 仙剑三
+  link: /3.html
+- name: 仙剑三问情篇
+  link: /3_q.html
+- name: 仙剑四
+  link: /4.html
+- name: 仙剑五
+  link: /5.html
+- name: 仙剑五前传
+  link: /5_f.html
+- name: 仙剑六
+  link: /6.html
+- name: 仙剑七
+  link: /7.html
+- name: 关于
   link: /about.html
